change in email

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">abc@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">abc@email.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
